--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
- <!DOCTYPE html>
- <html>
-   <head>
-     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/css/uikit.min.css" />
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/railscasts.min.css" />
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/js/uikit.min.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/js/uikit-icons.min.js"></script>
-     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-oi8o31xSQq8S0RpBcb4FaLB8LJi9AT8oIdmS1QldR8Ui7KUQjNAnDlJjp55Ba8FG" crossorigin="anonymous">
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/java.min.js"></script>
-     <script>hljs.initHighlightingOnLoad();</script>
-   </head>
-  <body class="uk-background-muted">
-    
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/css/uikit.min.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/js/uikit.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/js/uikit-icons.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/railscasts.min.css" />
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/java.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
+</head>
+<body class="uk-background-muted">
+
   
   <div class="uk-background-muted uk-flex uk-flex-center uk-flex-middle uk-text-center uk-padding-small" uk-grid>
     
@@ -34,7 +34,7 @@
   <li>
     <a href="https://wit-hdip-comp-sci-2018.github.io/"
        title="To the Programme home..." pos="bottom" uk-tooltip>
-      <i class="fal fa-th fa-4x "></i>
+      <i class="fas fa-th fa-4x "></i>
     </a>
   </li>
 
@@ -50,7 +50,7 @@
   <li>
     <a href="https://moodle.wit.ie/mod/adobeconnect/view.php?id=2427816"
        title="To Adobe connect ..." pos="bottom" uk-tooltip>
-      <i class="fal fa-address-card   fa-2x" style="color:grey""></i>
+      <i class="far fa-address-card   fa-2x" style="color:grey""></i>
     </a>
   </li>
 
@@ -60,7 +60,7 @@
   <li>
     <a href="https://moodle.wit.ie/course/view.php?id=118143&section=1"
        title="To Moodle ..." pos="bottom" uk-tooltip>
-      <i class="fal fa-graduation-cap fa-2x" style="color:#f87f2a""></i>
+      <i class="fas fa-graduation-cap fa-2x" style="color:#f87f2a""></i>
     </a>
   </li>
 
@@ -102,7 +102,7 @@
   <li>
     <a href="./talkwall.html"
        title="All slides's in module" pos="bottom" uk-tooltip>
-      <i class="fal fa-object-group   fa-2x" style="color:#009688""></i>
+      <i class="fas fa-object-group   fa-2x" style="color:#009688""></i>
     </a>
   </li>
 
@@ -114,7 +114,7 @@
   <li>
     <a href="./labwall.html"
        title="All labs's in module" pos="bottom" uk-tooltip>
-      <i class="fal fa-flask          fa-2x" style="color:#00BCD4""></i>
+      <i class="fas fa-flask          fa-2x" style="color:#00BCD4""></i>
     </a>
   </li>
 
@@ -215,7 +215,7 @@
         <h3>  Assignments </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -277,7 +277,7 @@
         <h3>  Induction </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -339,7 +339,7 @@
         <h3>  1a: Introduction to Processing </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -401,7 +401,7 @@
         <h3>  1b: Animating your Drawings </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -463,7 +463,7 @@
         <h3>  2a: Selection and Events </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -525,7 +525,7 @@
         <h3> 2b: Iteration (Loops) </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -587,7 +587,7 @@
         <h3> 3a: Methods (Part 1) </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -649,7 +649,7 @@
         <h3> 3b: Methods (Part 2) </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -711,7 +711,7 @@
         <h3> 4a: Classes (Part 1)  </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -773,7 +773,7 @@
         <h3>  4b: Classes (Part 2) </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -835,7 +835,7 @@
         <h3>  5a: Swing and Arrays </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -897,7 +897,7 @@
         <h3>  5b: Arrays and Classes </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -959,7 +959,7 @@
         <h3>  6: Game of Pong </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1021,7 +1021,7 @@
         <h3> 7: IntelliJ and Basic I/O </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1083,7 +1083,7 @@
         <h3>  8: Grouping Objects </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1145,7 +1145,7 @@
         <h3>  9: Menu Driven Apps and Persistence </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1207,7 +1207,7 @@
         <h3>  10: Persistence (XML & Exceptions) </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1269,7 +1269,7 @@
         <h3>  11: Inheritance and Polymorphism </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1331,7 +1331,7 @@
         <h3>  12: Collections (Map and Set) </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-sitemap        fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-sitemap        fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1372,5 +1372,5 @@
   </div>
 
 
-  </body>
- </html>
+</body>
+</html>
