--- a/labwall.html
+++ b/labwall.html
@@ -1,20 +1,20 @@
- <!DOCTYPE html>
- <html>
-   <head>
-     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/css/uikit.min.css" />
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/.min.css" />
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/js/uikit.min.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/js/uikit-icons.min.js"></script>
-     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-oi8o31xSQq8S0RpBcb4FaLB8LJi9AT8oIdmS1QldR8Ui7KUQjNAnDlJjp55Ba8FG" crossorigin="anonymous">
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/java.min.js"></script>
-     <script>hljs.initHighlightingOnLoad();</script>
-   </head>
-  <body class="uk-background-muted">
-    
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/css/uikit.min.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/js/uikit.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/js/uikit-icons.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/.min.css" />
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/java.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
+</head>
+<body class="uk-background-muted">
+
   
   
   <div class="uk-background-muted uk-flex uk-flex-center uk-flex-middle uk-text-center uk-padding-small" uk-grid>
@@ -35,7 +35,7 @@
   <li>
     <a href="index.html"
        title="To the top level Topics for this Module" pos="bottom" uk-tooltip>
-      <i class="fal fa-home fa-4x"></i>
+      <i class="fas fa-home fa-4x"></i>
     </a>
   </li>
 
@@ -51,7 +51,7 @@
   <li>
     <a href="https://moodle.wit.ie/mod/adobeconnect/view.php?id=2427816"
        title="To Adobe connect ..." pos="bottom" uk-tooltip>
-      <i class="fal fa-address-card   fa-2x" style="color:grey""></i>
+      <i class="far fa-address-card   fa-2x" style="color:grey""></i>
     </a>
   </li>
 
@@ -61,7 +61,7 @@
   <li>
     <a href="https://moodle.wit.ie/course/view.php?id=118143&section=1"
        title="To Moodle ..." pos="bottom" uk-tooltip>
-      <i class="fal fa-graduation-cap fa-2x" style="color:#f87f2a""></i>
+      <i class="fas fa-graduation-cap fa-2x" style="color:#f87f2a""></i>
     </a>
   </li>
 
@@ -103,7 +103,7 @@
   <li>
     <a href="./talkwall.html"
        title="All slides's in module" pos="bottom" uk-tooltip>
-      <i class="fal fa-object-group   fa-2x" style="color:#009688""></i>
+      <i class="fas fa-object-group   fa-2x" style="color:#009688""></i>
     </a>
   </li>
 
@@ -115,7 +115,7 @@
   <li>
     <a href="./labwall.html"
        title="All labs's in module" pos="bottom" uk-tooltip>
-      <i class="fal fa-flask          fa-2x" style="color:#00BCD4""></i>
+      <i class="fas fa-flask          fa-2x" style="color:#00BCD4""></i>
     </a>
   </li>
 
@@ -234,7 +234,7 @@
         <h3> Assignment-1</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -296,7 +296,7 @@
         <h3> Assignment-2</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -358,7 +358,7 @@
         <h3> Assignment 3</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -420,7 +420,7 @@
         <h3> Induction</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -482,7 +482,7 @@
         <h3> Lab-1a</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -544,7 +544,7 @@
         <h3> Lab-1b</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -606,7 +606,7 @@
         <h3> Lab-02a</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -668,7 +668,7 @@
         <h3> Lab-02b</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -730,7 +730,7 @@
         <h3> Lab-03a</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -792,7 +792,7 @@
         <h3> Lab-03b</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -854,7 +854,7 @@
         <h3> Lab-04a</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -916,7 +916,7 @@
         <h3> Lab-04b</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -978,7 +978,7 @@
         <h3> Lab-05a</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1040,7 +1040,7 @@
         <h3> Lab-05b</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1102,7 +1102,7 @@
         <h3> Lab-06a</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1164,7 +1164,7 @@
         <h3> Lab-06b</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1226,7 +1226,7 @@
         <h3> Lab-06c</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1288,7 +1288,7 @@
         <h3> Lab-06d</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1350,7 +1350,7 @@
         <h3> Lab-07a</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1412,7 +1412,7 @@
         <h3> Lab-07b</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1474,7 +1474,7 @@
         <h3> Lab-08a</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1536,7 +1536,7 @@
         <h3> Lab-08b</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1598,7 +1598,7 @@
         <h3> Lab-09a</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1660,7 +1660,7 @@
         <h3> Lab-09b</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1722,7 +1722,7 @@
         <h3> Assignment 3 Prerequisite</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1784,7 +1784,7 @@
         <h3> Lab-10</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1846,7 +1846,7 @@
         <h3> Lab-11</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1908,7 +1908,7 @@
         <h3> Lab-12</h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-flask          fa-2x" style="color:#00BCD4" > </i>
+        <i class=" fas fa-flask          fa-2x" style="color:#00BCD4" > </i>
       </div>
     </div>
   </div>
@@ -1949,5 +1949,5 @@
   </div>
 
 
-  </body>
- </html>
+</body>
+</html>
