--- a/talkwall.html
+++ b/talkwall.html
@@ -1,20 +1,20 @@
- <!DOCTYPE html>
- <html>
-   <head>
-     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/css/uikit.min.css" />
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/.min.css" />
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/js/uikit.min.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/js/uikit-icons.min.js"></script>
-     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-oi8o31xSQq8S0RpBcb4FaLB8LJi9AT8oIdmS1QldR8Ui7KUQjNAnDlJjp55Ba8FG" crossorigin="anonymous">
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/java.min.js"></script>
-     <script>hljs.initHighlightingOnLoad();</script>
-   </head>
-  <body class="uk-background-muted">
-    
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/css/uikit.min.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/js/uikit.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.4/js/uikit-icons.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/.min.css" />
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/java.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
+</head>
+<body class="uk-background-muted">
+
   
   
   <div class="uk-background-muted uk-flex uk-flex-center uk-flex-middle uk-text-center uk-padding-small" uk-grid>
@@ -35,7 +35,7 @@
   <li>
     <a href="index.html"
        title="To the top level Topics for this Module" pos="bottom" uk-tooltip>
-      <i class="fal fa-home fa-4x"></i>
+      <i class="fas fa-home fa-4x"></i>
     </a>
   </li>
 
@@ -51,7 +51,7 @@
   <li>
     <a href="https://moodle.wit.ie/mod/adobeconnect/view.php?id=2427816"
        title="To Adobe connect ..." pos="bottom" uk-tooltip>
-      <i class="fal fa-address-card   fa-2x" style="color:grey""></i>
+      <i class="far fa-address-card   fa-2x" style="color:grey""></i>
     </a>
   </li>
 
@@ -61,7 +61,7 @@
   <li>
     <a href="https://moodle.wit.ie/course/view.php?id=118143&section=1"
        title="To Moodle ..." pos="bottom" uk-tooltip>
-      <i class="fal fa-graduation-cap fa-2x" style="color:#f87f2a""></i>
+      <i class="fas fa-graduation-cap fa-2x" style="color:#f87f2a""></i>
     </a>
   </li>
 
@@ -103,7 +103,7 @@
   <li>
     <a href="./talkwall.html"
        title="All slides's in module" pos="bottom" uk-tooltip>
-      <i class="fal fa-object-group   fa-2x" style="color:#009688""></i>
+      <i class="fas fa-object-group   fa-2x" style="color:#009688""></i>
     </a>
   </li>
 
@@ -115,7 +115,7 @@
   <li>
     <a href="./labwall.html"
        title="All labs's in module" pos="bottom" uk-tooltip>
-      <i class="fal fa-flask          fa-2x" style="color:#00BCD4""></i>
+      <i class="fas fa-flask          fa-2x" style="color:#00BCD4""></i>
     </a>
   </li>
 
@@ -273,7 +273,7 @@
         <h3> Coding in Processing </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -334,7 +334,7 @@
         <h3> Introduction to the PDE </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -395,7 +395,7 @@
         <h3> Static Drawings </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -456,7 +456,7 @@
         <h3> Formatting Shapes </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -517,7 +517,7 @@
         <h3> Basic Animation </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -578,7 +578,7 @@
         <h3> Data Types </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -639,7 +639,7 @@
         <h3> Conditional Statements </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -700,7 +700,7 @@
         <h3> Mouse Events </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -761,7 +761,7 @@
         <h3> Scope of Variables </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -822,7 +822,7 @@
         <h3> While loops </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -883,7 +883,7 @@
         <h3> For loops </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -944,7 +944,7 @@
         <h3> Mouse event methods </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1005,7 +1005,7 @@
         <h3> Bespoke methods </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1066,7 +1066,7 @@
         <h3> More on methods </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1127,7 +1127,7 @@
         <h3> Strings </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1188,7 +1188,7 @@
         <h3> More on Strings </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1249,7 +1249,7 @@
         <h3> Classes and Objects </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1310,7 +1310,7 @@
         <h3> Behaviour in Classes </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1371,7 +1371,7 @@
         <h3> Classes and Objects </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1432,7 +1432,7 @@
         <h3>  Using Swing </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1493,7 +1493,7 @@
         <h3>  Using Arrays </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1554,7 +1554,7 @@
         <h3>  Array Recap </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1615,7 +1615,7 @@
         <h3>  Arrays and Classes </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1676,7 +1676,7 @@
         <h3> Game of Pong </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1737,7 +1737,7 @@
         <h3> Game of Pong  </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1798,7 +1798,7 @@
         <h3> Game of Pong </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1859,7 +1859,7 @@
         <h3> Game of Pong </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1920,7 +1920,7 @@
         <h3> Remaining Weeks </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -1981,7 +1981,7 @@
         <h3> JVM </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2042,7 +2042,7 @@
         <h3> Introduction to IntelliJ </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2103,7 +2103,7 @@
         <h3> OO Recap </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2164,7 +2164,7 @@
         <h3> Scanner IO </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2225,7 +2225,7 @@
         <h3> Array Recap </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2286,7 +2286,7 @@
         <h3> ShopV2.0 </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2347,7 +2347,7 @@
         <h3> ArrayList (part 1) </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2408,7 +2408,7 @@
         <h3> ArrayList (part 2) </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2469,7 +2469,7 @@
         <h3> Menu Driven Systems </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2530,7 +2530,7 @@
         <h3> CRUD Process </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2591,7 +2591,7 @@
         <h3>  Debugging </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2652,7 +2652,7 @@
         <h3> Introduction to XML </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2713,7 +2713,7 @@
         <h3> XML and Java </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2774,7 +2774,7 @@
         <h3> Exception Handling </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2835,7 +2835,7 @@
         <h3> Miscellaneous Concepts </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2896,7 +2896,7 @@
         <h3>  Inheritance </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -2957,7 +2957,7 @@
         <h3>  Exploring Polymorphism </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -3018,7 +3018,7 @@
         <h3> Tech Support System V1 </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -3079,7 +3079,7 @@
         <h3> Tech Support System V2 </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -3140,7 +3140,7 @@
         <h3> Tech Support System V3 </h3>
       </div>
       <div class="uk-width-1-4@m">
-        <i class=" fal fa-object-group   fa-2x" style="color:#009688" > </i>
+        <i class=" fas fa-object-group   fa-2x" style="color:#009688" > </i>
       </div>
     </div>
   </div>
@@ -3181,5 +3181,5 @@
   </div>
 
 
-  </body>
- </html>
+</body>
+</html>
